--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emoji-banner-generator",
+  "name": "emjtxt",
   "version": "1.0.1",
   "description": "Convert text to emoji banner art for CLI display",
   "main": "dist/index.js",
@@ -27,12 +27,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/levyxx/emoji-banner-generator.git"
+    "url": "git+https://github.com/levyxx/emjtxt.git"
   },
   "bugs": {
-    "url": "https://github.com/levyxx/emoji-banner-generator/issues"
+    "url": "https://github.com/levyxx/emjtxt/issues"
   },
-  "homepage": "https://github.com/levyxx/emoji-banner-generator#readme",
+  "homepage": "https://github.com/levyxx/emjtxt#readme",
   "files": [
     "dist",
     "README.md"
